# jscom-mini-services

./: .gitignore  CLAUDE.md  README.md
jscom-api-client/: README.md  pyproject.toml
jscom-api-client/src/jscom_api/: __init__.py  client.py  config.py  exceptions.py  models.py
jscom-api-client/src/jscom_api/cli/: __init__.py  main.py
jscom-api-client/tests/: __init__.py  conftest.py  test_cli.py  test_client.py
lambdas/: pyproject.toml  requirements.txt
lambdas/src/: my_ip_lambda.py  update_dns_lambda.py
lambdas/src/api/: __init__.py  config.py  exceptions.py  handler.py  middleware.py  models.py
lambdas/src/api/services/: __init__.py  dns_service.py
lambdas/tests/: __init__.py  conftest.py  test_config.py  test_dns_service.py  test_handler.py  test_models.py
llm_memory/: api-consolidation-context.md
terraform/: api_lambda.tf  main.tf  my_ip_lambda.tf  outputs.tf  terraform.tfvars.example  update_dns_lambda.tf  variables.tf
terraform/deprecated/: my_ip_lambda.tf  update_dns_lambda.tf
