[tool.poetry]
name = "jscom-api"
version = "0.1.0"
description = "CLI and Python client for jscom-mini-services API"
authors = ["John Sosoka"]
readme = "README.md"
packages = [{include = "jscom_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31"
typer = {version = "^0.15", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
responses = "^0.25"
mypy = "^1.8"
ruff = "^0.2"
types-requests = "^2.31"

[tool.poetry.scripts]
jscom-api = "jscom_api.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
