[tool.poetry]
name = "jscom-mini-services-api"
version = "0.1.0"
description = "Consolidated Lambda API for jscom-mini-services"
authors = ["John Sosoka"]
packages = [{include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.0"
aws-lambda-powertools = {version = "^3.0.0", extras = ["tracer", "validation"]}
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
mypy = "^1.8"
ruff = "^0.2"
boto3-stubs = {version = "^1.36", extras = ["route53"]}
moto = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
